Add API to get available questionnaire languages
